deploy: d60fca91b415c41fec84204ba99fb42c51c52cb2

--- a/gene2peak.html
+++ b/gene2peak.html
@@ -85,7 +85,7 @@ gene2peak    </h1>
 </span><span id="L-24"><a href="#L-24"><span class="linenos"> 24</span></a>
 </span><span id="L-25"><a href="#L-25"><span class="linenos"> 25</span></a><span class="sd">    Parameters:</span>
 </span><span id="L-26"><a href="#L-26"><span class="linenos"> 26</span></a><span class="sd">    peak_file (str): Path to the peak file.</span>
-</span><span id="L-27"><a href="#L-27"><span class="linenos"> 27</span></a><span class="sd">    peak_type (str): Type of peak caller used to generate peak file (e.g. MACS2, SEACR).</span>
+</span><span id="L-27"><a href="#L-27"><span class="linenos"> 27</span></a><span class="sd">    peak_type (str): Type of peak caller used to generate peak file (e.g. MACS2, SEACR, BED6).</span>
 </span><span id="L-28"><a href="#L-28"><span class="linenos"> 28</span></a><span class="sd">    gene_file (str): Path to the gene file.</span>
 </span><span id="L-29"><a href="#L-29"><span class="linenos"> 29</span></a><span class="sd">    species (str): Species of the reference genome.</span>
 </span><span id="L-30"><a href="#L-30"><span class="linenos"> 30</span></a><span class="sd">    num_features (int): Number of nearest features to find.</span>
@@ -205,7 +205,7 @@ gene2peak    </h1>
 </span><span id="gene2peak-25"><a href="#gene2peak-25"><span class="linenos">25</span></a>
 </span><span id="gene2peak-26"><a href="#gene2peak-26"><span class="linenos">26</span></a><span class="sd">    Parameters:</span>
 </span><span id="gene2peak-27"><a href="#gene2peak-27"><span class="linenos">27</span></a><span class="sd">    peak_file (str): Path to the peak file.</span>
-</span><span id="gene2peak-28"><a href="#gene2peak-28"><span class="linenos">28</span></a><span class="sd">    peak_type (str): Type of peak caller used to generate peak file (e.g. MACS2, SEACR).</span>
+</span><span id="gene2peak-28"><a href="#gene2peak-28"><span class="linenos">28</span></a><span class="sd">    peak_type (str): Type of peak caller used to generate peak file (e.g. MACS2, SEACR, BED6).</span>
 </span><span id="gene2peak-29"><a href="#gene2peak-29"><span class="linenos">29</span></a><span class="sd">    gene_file (str): Path to the gene file.</span>
 </span><span id="gene2peak-30"><a href="#gene2peak-30"><span class="linenos">30</span></a><span class="sd">    species (str): Species of the reference genome.</span>
 </span><span id="gene2peak-31"><a href="#gene2peak-31"><span class="linenos">31</span></a><span class="sd">    num_features (int): Number of nearest features to find.</span>
@@ -246,7 +246,7 @@ gene2peak    </h1>
 
 <p>Parameters:
 peak_file (str): Path to the peak file.
-peak_type (str): Type of peak caller used to generate peak file (e.g. MACS2, SEACR).
+peak_type (str): Type of peak caller used to generate peak file (e.g. MACS2, SEACR, BED6).
 gene_file (str): Path to the gene file.
 species (str): Species of the reference genome.
 num_features (int): Number of nearest features to find.
