--- a/peak2gene.html
+++ b/peak2gene.html
@@ -88,7 +88,7 @@ peak2gene    </h1>
 </span><span id="L-27"><a href="#L-27"><span class="linenos"> 27</span></a>
 </span><span id="L-28"><a href="#L-28"><span class="linenos"> 28</span></a><span class="sd">    Parameters:</span>
 </span><span id="L-29"><a href="#L-29"><span class="linenos"> 29</span></a><span class="sd">    peak_file (str): Path to the peak file.</span>
-</span><span id="L-30"><a href="#L-30"><span class="linenos"> 30</span></a><span class="sd">    peak_type (str): Type of peak caller used to generate peak file (e.g. MACS2, SEACR).</span>
+</span><span id="L-30"><a href="#L-30"><span class="linenos"> 30</span></a><span class="sd">    peak_type (str): Type of peak caller used to generate peak file (e.g. MACS2, SEACR, BED6).</span>
 </span><span id="L-31"><a href="#L-31"><span class="linenos"> 31</span></a><span class="sd">    species (str): Species of the reference genome.</span>
 </span><span id="L-32"><a href="#L-32"><span class="linenos"> 32</span></a><span class="sd">    num_features (int): Number of nearest features to find.</span>
 </span><span id="L-33"><a href="#L-33"><span class="linenos"> 33</span></a><span class="sd">    ref_dir (str): Directory containing decomposed reference data.</span>
@@ -220,7 +220,7 @@ peak2gene    </h1>
 </span><span id="peak2gene-28"><a href="#peak2gene-28"><span class="linenos">28</span></a>
 </span><span id="peak2gene-29"><a href="#peak2gene-29"><span class="linenos">29</span></a><span class="sd">    Parameters:</span>
 </span><span id="peak2gene-30"><a href="#peak2gene-30"><span class="linenos">30</span></a><span class="sd">    peak_file (str): Path to the peak file.</span>
-</span><span id="peak2gene-31"><a href="#peak2gene-31"><span class="linenos">31</span></a><span class="sd">    peak_type (str): Type of peak caller used to generate peak file (e.g. MACS2, SEACR).</span>
+</span><span id="peak2gene-31"><a href="#peak2gene-31"><span class="linenos">31</span></a><span class="sd">    peak_type (str): Type of peak caller used to generate peak file (e.g. MACS2, SEACR, BED6).</span>
 </span><span id="peak2gene-32"><a href="#peak2gene-32"><span class="linenos">32</span></a><span class="sd">    species (str): Species of the reference genome.</span>
 </span><span id="peak2gene-33"><a href="#peak2gene-33"><span class="linenos">33</span></a><span class="sd">    num_features (int): Number of nearest features to find.</span>
 </span><span id="peak2gene-34"><a href="#peak2gene-34"><span class="linenos">34</span></a><span class="sd">    ref_dir (str): Directory containing decomposed reference data.</span>
@@ -260,7 +260,7 @@ peak2gene    </h1>
 
 <p>Parameters:
 peak_file (str): Path to the peak file.
-peak_type (str): Type of peak caller used to generate peak file (e.g. MACS2, SEACR).
+peak_type (str): Type of peak caller used to generate peak file (e.g. MACS2, SEACR, BED6).
 species (str): Species of the reference genome.
 num_features (int): Number of nearest features to find.
 ref_dir (str): Directory containing decomposed reference data.
